--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <label for="isGraduate">Graduate or Undergraduate:</label>
     <select id="isGraduate">
-      <option value="undergrad">Undergraduate</option>
-      <option value="graduate">Graduate</option>
+      <option value="false">Undergraduate</option>
+      <option value="true">Graduate</option>
     </select>
 
     <button type="button" onclick="calculateGrade()">Calculate Grade</button>
