--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         // Undergraduate grading logic
         if (unitsPassed === 5 && finalExamScore >= 95) grade = "A+";
         else if (unitsPassed === 5 && finalExamScore >= 90) grade = "A";
-        else if (unitsPassed === 5 && finalExamScore < 90) grade = "A-";
+        else if (unitsPassed === 5) grade = "A-";
         else if (unitsPassed === 4 && finalExamScore >= 70) grade = "B+";
         else if (unitsPassed === 4) grade = "B";
         else if (unitsPassed === 3 && finalExamScore >= 60) grade = "B-";
